--- a/src/App.css
+++ b/src/App.css
@@ -479,3 +479,16 @@ h2 small {
   max-width: 1700px;
   padding-left: 15px;
 }
+
+.msTeamsIcon {
+  width: 60px;
+  height: 50px;
+  margin-top: -5px;
+  margin-bottom: -15px;
+}
+.googleIcon {
+  margin-top: -10px;
+  margin-bottom: -10px;
+  width: 60px;
+  height: 50px;
+}
