--- a/src/App.css
+++ b/src/App.css
@@ -495,3 +495,11 @@ h2 small {
   width: 60px;
   height: 50px;
 }
+
+.thumbnailIcon {
+  width: 40px;
+  height: 40px;
+  /* display: block; */
+  margin-left: auto;
+  margin-right: auto;
+}
