--- a/src/App.css
+++ b/src/App.css
@@ -473,6 +473,17 @@ h2 small {
   background-size: 100%; */
 }
 
+.loaderIcon {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* background-image: url("./icons/add-circle.png");
+  background-repeat: no-repeat;
+  background-size: 100%; */
+}
+
 .logout {
   /* color: rgba(255, 0, 0, 0.692); */
   color: #f8d32c;
