--- a/src/App.css
+++ b/src/App.css
@@ -511,3 +511,8 @@ h2 small {
   margin-left: auto;
   margin-right: auto;
 }
+
+.courseDiv {
+  background-color: #c7f3b3;
+  border-radius: 5px
+}
