--- a/src/assets/plugins/nucleo/css/home.scss
+++ b/src/assets/plugins/nucleo/css/home.scss
@@ -164,7 +164,7 @@ body{
             .accordion__button{
                 position: relative;
                 background: #FF9154;
-                padding:30px 15px 30px 45px;
+                padding:15px 15px 15px 45px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -308,7 +308,7 @@ body{
     display: block;
     text-align: center;
     position: absolute;
-    top: -70px;
+    top: -55px;
     right: 15px;
     &:hover{
         color: #000;
@@ -316,9 +316,11 @@ body{
   }
 
   .content-css{
-      padding-top: 20px;
-      padding-bottom: 20px;
-      position: relative;
+    padding: 20px;
+    position: relative;
+    border: 1px solid #eee;
+    margin-bottom: 20px;
+    border-top: 0px;
       span{
         &::first-word{
             font-family: Montserrat;
