--- a/mygurukool/src/App.css
+++ b/mygurukool/src/App.css
@@ -325,7 +325,7 @@ header {
   margin-bottom: 20px;
 }
 header .far {
-  color: #fff;
+  color: #000;
 }
 .navbar-dark .navbar-brand.logo {
   color: #fff;
