--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -1,7 +1,22 @@
 *{
     font-family: 'Montserrat', sans-serif;
 }
-
+a:hover{
+    text-decoration: none;
+}
+.page-banner{
+    position: absolute;
+    top:0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    img{
+        width:100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
 .border-shadow{
     background: #FFFFFF;
     box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
@@ -9,6 +24,22 @@
     padding:15px;
     border:0px;
 }
+.card-hover{
+    .icon-circle{
+        width: 95px;
+        height: 95px;
+        border-radius: 100%;
+        display: flex;
+        margin-bottom: 10px;
+    }
+    &:hover{
+        color:rgb(244, 180, 89);
+        .icon-circle{
+            background-color: #0C2F96;
+        }
+    }
+}
+
 .flex-row{
     display: flex;
     flex-wrap: wrap;
@@ -53,9 +84,9 @@
     width: 270px;
     height: 200px;
     svg{
-        width: 70px;
+        width: 60px;
         height: auto;
-        margin: 0px auto 20px;
+        margin: auto;
     }
 }
 .simple-link{
@@ -105,3 +136,348 @@
         }
     }
 }
+
+// Home page
+
+*{
+    font-family: 'Montserrat', sans-serif;
+}
+.home-header{
+    background: #fff;
+    padding: 15px 0px;
+    .header-content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .header-left{
+            h2{
+                margin: 0px;
+                color:#000;
+
+            }
+        }
+        .header-right{
+            ul{
+                margin: 0px;
+                li{
+                    display: inline-block;
+                    a{
+                        color:#000;
+                        text-decoration: none;
+                        margin-right: 15px;
+                        padding-right: 15px;
+                        border-right: 1px solid #F0F0F0;
+                        font-weight: 600;
+                        svg{
+                            margin-right: 10px;
+                        }
+                    }
+                    button{
+                        svg{
+                            margin-right: 10px;
+
+                        }
+                    }
+                    
+                }
+            }
+        }
+    }
+}
+
+.btn-red{
+    background: #E6000E;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    padding: 8px 13px 9px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    border: 0px;
+    display: flex;
+    align-items: center;
+    svg{
+        margin-right: 10px;
+    }
+}
+.btn-red:hover{
+    background-color: #B20C16;
+}
+.bg-yellow{
+    background: #F0E700;
+}
+.bg-yellow:hover{
+    background: #9D9807;
+    color:#000;
+}
+.txt-black{
+    color:#000;
+}
+
+.section-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.border-shadow{
+    background: #FFFFFF;
+    box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    padding:15px;
+}
+.group-dropdown{
+    select{
+        margin-left: 10px;
+        appearance: none;
+        background: #15B446 url('../assets/images/home-img/arrow-down.svg')  94% 14px no-repeat;
+        background-size: 18px;
+        box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+        border-radius: 3px;
+        padding: 9px 36px 9px 12px;
+        color: #fff;
+        font-weight: 600;
+        border: 0px;
+    }
+}
+.green-select{
+    appearance: none;
+    background: #15B446 url('../assets/images/home-img/arrow-down.svg')  94% 14px no-repeat;
+    background-size: 18px;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    padding: 9px 36px 9px 12px;
+    color: #fff;
+    font-weight: 600;
+    border: 0px;
+}
+
+.tab-section{
+    background: #fff;
+    .accordion{
+        border:0px;
+    }
+    .nav-pills{
+        justify-content: center;
+        border-bottom:1px solid #D7D7D7;
+        margin-bottom: 30px;
+        padding-bottom: 30px;
+        .nav-item{
+            .nav-link{
+                padding:15px;
+                width: 140px;
+                text-align: center;
+                border:0px;
+                cursor: pointer;
+                .tab-icon{
+                    background: #D5D5D5;
+                    border-radius:100%;
+                    width: 95px;
+                    height: 95px;
+                    margin:0px auto 20px;
+                    display: flex;
+                    img{
+                        width: 40px;
+                        margin: auto;
+                        height: auto;
+                    }
+                    svg{
+                        margin: auto;
+                    }
+                }
+                
+                h3{
+                    font-weight: 600;
+                    font-size: 16px;
+                    line-height: 20px; 
+                    color: #32325d;  
+                }
+                &.active{
+                    background: #FFFFFF;
+                    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.08);
+                    border-radius: 5px;
+                    .tab-icon{
+                        background: #7561BA;
+                        svg{
+                    
+                        }
+                    }
+                }
+            }
+    
+        }
+    }
+    .tab-content{
+        background: #FFFFFF;
+        // border: 1px solid #E9E9E9;
+        // box-sizing: border-box;
+        // box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
+        // border-radius: 5px;
+        padding:15px;
+        .accordion__button{
+            position: relative;
+            background: #FF9154;
+            padding:15px 15px 15px 45px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            cursor: pointer;
+            &:before{
+                position: absolute;
+                left: 15px;
+            }
+            .accordian-title{
+                font-weight: 600;
+                font-size: 20px;
+                line-height: 24px;
+                margin: 0px;
+                color: #000000;
+            }
+            .accordian-date{
+                font-style: normal;
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 20px;
+                padding-right: 150px;
+                text-align: right;
+
+                color: #000000;
+                span{
+                    font-weight: normal;
+                }
+            }
+        }
+        .accordian-body{
+            .accordian-content{
+                .flex-row{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-top: 20px;
+                    h2{
+                        font-family: Montserrat;
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 20px;
+                        line-height: 24px;
+                        margin: 0px;
+                        color: #000000;
+                    }
+                }
+                p{
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 16px;
+                    line-height: 27px;
+                    color: #666666;
+                    margin: 20px 0px;
+                }
+                .border-top{
+                    border-top: 1px solid #D7D7D7;
+                    margin-top: 30px;
+                }
+            }
+        }
+    }
+}
+
+.tbl-header{
+    padding:10px 15px !important;
+    margin: 30px 0px 0px 0px !important;
+    &::before{
+        display: none !important;
+    }
+    h2{
+        margin: 0px;
+        color: #000000;
+        font-size: 18px;
+    }
+    div{
+        button{
+            display: inline-block;
+            svg{
+                margin-right: 0px;
+            }
+        }
+    }
+}
+.custom-table{
+    thead{
+        th{
+            background: #6FA87C;
+            color: #000;
+            font-size: 16px ;
+            font-weight: 600;
+            text-transform: capitalize;
+        }
+    }
+}
+.txt-white{
+    color:#fff;
+}
+.br-0{
+    border-radius: 0px !important;
+}
+
+.sticky-box{
+    position: sticky;
+    top:0px;
+    z-index: 2;
+    background: #fff;
+    padding-top: 20px;
+}
+.content-scroll{
+    max-height: calc(100vh - 90px);
+    overflow-y: auto;
+}
+.content-scroll::-webkit-scrollbar {
+    width: 8px;
+  }
+  .content-scroll::-webkit-scrollbar-track {
+    background: #eee;
+  }
+  
+  .content-scroll::-webkit-scrollbar-thumb {
+    background: #6e52d1;
+    border-radius: 10px;
+  }
+  
+  .my-anchor-css-class{
+    background: #E6000E;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    padding: 8px 13px 9px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    border: 0px;
+    color: #fff;
+    margin:10px auto auto;
+    width: 130px;
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: -55px;
+    right: 15px;
+    &:hover{
+        color: #000;
+    }
+  }
+
+  .content-css{
+    padding: 20px;
+    position: relative;
+    border: 1px solid #eee;
+    margin-bottom: 20px;
+    border-top: 0px;
+      span{
+        &::first-word{
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 24px;
+            margin: 0px;
+            color: #000000;
+          }
+      }
+  }
