--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -470,6 +470,8 @@ a:hover{
     margin-bottom: 20px;
     border-top: 0px;
       span{
+          position: unset !important;
+          visibility: visible !important;
         &::first-word{
             font-family: Montserrat;
             font-style: normal;
