--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -21,7 +21,7 @@ a:hover{
     background: #FFFFFF;
     box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
-    padding:15px;
+    padding:10px;
     border:0px;
 }
 .card-hover{
@@ -97,6 +97,7 @@ a:hover{
 .home-header{
     background: #fff;
     padding: 15px 0px;
+    margin-bottom: 10px;
     .header-content{
         display: flex;
         justify-content: space-between;
@@ -223,7 +224,7 @@ a:hover{
     background: #FFFFFF;
     box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
-    padding:15px;
+    padding:10px;
 }
 .group-dropdown{
     select{
@@ -259,11 +260,11 @@ a:hover{
     .nav-pills{
         justify-content: center;
         border-bottom:1px solid #D7D7D7;
-        margin-bottom: 30px;
-        padding-bottom: 30px;
+        margin-bottom: 10px;
+        padding-bottom: 10px;
         .nav-item{
             .nav-link{
-                padding:15px;
+                padding:10px;
                 width: 140px;
                 text-align: center;
                 border:0px;
@@ -271,9 +272,9 @@ a:hover{
                 .tab-icon{
                     background: #D5D5D5;
                     border-radius:100%;
-                    width: 95px;
-                    height: 95px;
-                    margin:0px auto 20px;
+                    width: 80px;
+                    height: 80px;
+                    margin:0px auto 5px;
                     display: flex;
                     img{
                         width: 40px;
@@ -287,9 +288,9 @@ a:hover{
                 
                 h3{
                     font-weight: 600;
-                    font-size: 16px;
-                    line-height: 20px; 
-                    color: #32325d;  
+                    font-size: 16px; 
+                    color: #32325d; 
+                    margin-bottom: 0px; 
                 }
                 &.active{
                     background: #FFFFFF;
@@ -308,11 +309,7 @@ a:hover{
     }
     .tab-content{
         background: #FFFFFF;
-        // border: 1px solid #E9E9E9;
-        // box-sizing: border-box;
-        // box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
-        // border-radius: 5px;
-        padding:15px;
+        padding:0px;
         .accordion__button{
             position: relative;
             background: #FF9154;
@@ -382,7 +379,8 @@ a:hover{
 
 .tbl-header{
     padding:10px 15px !important;
-    margin: 30px 0px 0px 0px !important;
+    margin:  0px !important;
+    justify-content: unset;
     &::before{
         display: none !important;
     }
@@ -390,9 +388,10 @@ a:hover{
         margin: 0px;
         color: #000000;
         font-size: 18px;
+        flex: 1;
     }
     div{
-        button{
+        a{
             display: inline-block;
             svg{
                 margin-right: 0px;
@@ -423,7 +422,6 @@ a:hover{
     top:0px;
     z-index: 2;
     background: #fff;
-    padding-top: 20px;
 }
 .content-scroll{
     max-height: calc(100vh - 90px);
@@ -488,3 +486,19 @@ a:hover{
       display: flex;
       align-items: center;
   }
+
+  .SplitPane{
+      position: unset !important;
+      .Pane {
+          >div{
+              >div:nth-child(1){
+                  position: unset !important;
+                  overflow: unset;
+              }
+          }
+      }
+  }
+
+  .bg-green {
+    background-color: #2dce89 !important;
+}
