--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -502,3 +502,71 @@ a:hover{
   .bg-green {
     background-color: #2dce89 !important;
 }
+
+.custom-file {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 12px);
+    margin-bottom: 0;
+    .custom-file-input {
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        height: calc(1.5em + .75rem + 12px);
+        margin: 0;
+        overflow: hidden;
+        opacity: 0;
+        background: #eee;
+    }
+    .custom-file-label{
+        position: absolute;
+        top: 0px;
+        right: 0;
+        left: 0;
+        z-index: 1;
+        height: calc(1.5em + .75rem + 12px);
+        padding: 13px .75rem .375rem .75rem;
+        overflow: hidden;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #495057;
+        background: #eee;
+        border: 0px;
+        &::after {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 3;
+            display: block;
+            height: calc(1.5em + .75rem + 12px);
+            padding: .375rem .75rem;
+            line-height: 35px;
+            color: #fff;
+            content: "Browse";
+            background-color: #283bd5;
+            border-left: inherit;
+            border-radius: 0 .25rem .25rem 0;
+        }
+      
+    }
+}
+
+.congrats-txt{
+    text-align: center;
+    h2{
+        font-size: 16px;
+        margin-top: 30px;
+        span{
+            font-size: 40px;
+            font-weight: 600;
+            display: block;
+            padding-bottom: 10px;
+            color: #0600b7;
+        }
+    }
+    img{
+        margin-top: 20px;
+    }
+}
