fixed upload table data

--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -400,6 +400,7 @@ a:hover{
     }
 }
 .custom-table{
+    border:0px;
     thead{
         th{
             background: #6FA87C;
@@ -407,6 +408,13 @@ a:hover{
             font-size: 16px ;
             font-weight: 600;
             text-transform: capitalize;
+        }
+    }
+    tbody{
+        tr{
+            td{
+                padding:10px !important;
+            }
         }
     }
 }
