--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -263,6 +263,7 @@ a:hover{
         margin-bottom: 10px;
         padding-bottom: 10px;
         .nav-item{
+            margin: 0px 5px;
             .nav-link{
                 padding:10px;
                 width: 140px;
@@ -304,7 +305,16 @@ a:hover{
                     }
                 }
             }
-    
+            &:hover{
+                .nav-link{
+                    background: #FFFFFF;
+                    box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.08);
+                    border-radius: 5px;
+                    .tab-icon{
+                        background: #7561BA;
+                    }
+                }
+            }
         }
     }
     .tab-content{
@@ -488,6 +498,7 @@ a:hover{
             color: #000000;
           }
       }
+      
   }
 
   .navbar-items{
