--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -485,20 +485,10 @@ a:hover{
     border: 1px solid #eee;
     margin-bottom: 20px;
     border-top: 0px;
-      span{
-          position: unset !important;
-          visibility: visible !important;
-        &::first-word{
-            font-family: Montserrat;
-            font-style: normal;
-            font-weight: 600;
-            font-size: 20px;
-            line-height: 24px;
-            margin: 0px;
-            color: #000000;
-          }
+     > span:first-child{
+          width:1000px !important;
+          display: inline-block;
       }
-      
   }
 
   .navbar-items{
