--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -585,11 +585,12 @@ a:hover{
 }
 
 .input-field{
-    background: #eee;
+    background: #fff;
     padding: 13px 15px;
     height: auto;
     font-weight: 400;
     border:3px solid transparent;
+    box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
     &:focus{
         border:3px solid #15B446;
         outline: none;
@@ -609,3 +610,19 @@ a:hover{
     }
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+    background: transparent !important;
+    border-color: #fff !important;
+}
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover, 
+textarea:-webkit-autofill:focus, 
+textarea:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+    background: transparent !important;
+    border-color: #fff !important;
+}
