--- a/src/scss/comman.scss
+++ b/src/scss/comman.scss
@@ -327,7 +327,7 @@ a:hover{
         .accordion__button{
             position: relative;
             background: #FF9154;
-            padding:15px 15px 15px 45px;
+            padding:15px 15px 15px 15px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -335,6 +335,7 @@ a:hover{
             &:before{
                 position: absolute;
                 left: 15px;
+                display: none;
             }
             .accordian-title{
                 font-weight: 600;
@@ -462,24 +463,25 @@ a:hover{
   }
   
   .my-anchor-css-class{
-    background: #E6000E;
-    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.25);
-    border-radius: 3px;
-    padding: 8px 13px 9px;
-    font-weight: 600;
+    padding: 17px 13px 9px;
     font-size: 16px;
     line-height: 20px;
     border: 0px;
-    color: #fff;
-    margin:10px auto auto;
-    width: 130px;
+    color: #000;
+    margin: 10px auto auto;
     display: block;
-    text-align: center;
     position: absolute;
-    top: -55px;
-    right: 15px;
+    top: -64px;
+    width: 100%;
+    right: 0px;
+    height: 56px;
+    text-align: right;
+    transition: 0.5s all ease;
+    font-weight: 600;
+    font-size: 20px;
     &:hover{
         color: #000;
+
     }
   }
 
@@ -625,4 +627,34 @@ textarea:-webkit-autofill:active{
     -webkit-box-shadow: 0 0 0 30px white inset !important;
     background: transparent !important;
     border-color: #fff !important;
+}
+
+.remove-side-border{
+    .Resizer {
+        display: none;
+    }
+}
+
+.confrance-header{
+    padding: 10px 15px;
+    background: #6558fc;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    div{
+        a{
+            margin-left:10px;
+            i{
+                display: inline-block;
+            }
+        }
+    }
+
+    span{
+        color:#fff;
+        font-weight: 500;
+    }
+}
+.sub-excer-section{
+    padding-bottom: 20px;
 }
