--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -494,6 +494,7 @@ a:hover{
      > span:first-child{
           width:1000px !important;
           display: inline-block;
+          max-width: 100%;
       }
   }
 
@@ -504,11 +505,13 @@ a:hover{
 
   .SplitPane{
       position: unset !important;
+      background: #fff;
       .Pane {
           >div{
               >div:nth-child(1){
                   position: unset !important;
-                  overflow: unset;
+                  overflow: unset !important;
+                  margin: 0px !important;
               }
           }
       }
@@ -591,13 +594,29 @@ a:hover{
     padding: 13px 15px;
     height: auto;
     font-weight: 400;
-    border:3px solid transparent;
+    border:2px solid transparent;
     box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
-    &:focus{
-        border:3px solid #687EFB;
+    &.form-success{
+        border:2px solid #687EFB;
         outline: none;
-        box-shadow: unset;
-        background: #e5e4ff;
+        box-shadow: unset !important;
+        background:#e5e4ff url(../assets/icons/check.svg) 98% 11px  no-repeat;
+    }
+    &.form-invalid{
+        border:2px solid #687EFB;
+        outline: none;
+        box-shadow: unset !important;
+        background:#e5e4ff url(../assets/icons/cross.svg) 98% 18px  no-repeat;
+    }
+}
+select{
+    &.input-field{
+        &.form-success{
+            background-position: 95% 11px;
+        }
+        &.form-invalid{
+            background-position: 95% 18px;
+        }
     }
 }
 .create-btn{
@@ -641,6 +660,7 @@ textarea:-webkit-autofill:active{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 145px;
     div{
         a{
             margin-left:10px;
@@ -656,9 +676,7 @@ textarea:-webkit-autofill:active{
         font-weight: 500;
     }
 }
-.sub-excer-section{
-    padding-bottom: 20px;
-}
+
 .text-blue{
     color:#283bd5;
 }
@@ -669,4 +687,16 @@ textarea:-webkit-autofill:active{
     height: calc(100vh - 100px);
     max-width: 750px;
     margin: auto;
+}
+.center-loader{
+    position: absolute;
+    top:0px;
+    left: 0px;
+    background: transparent;
+    width:100%;
+    height:100%;
+    display:flex;
+}
+.Pane2  {
+    background: #fff;
 }
