fixed  "V is not working"

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -354,7 +354,7 @@ a:hover{
                 font-weight: 600;
                 font-size: 16px;
                 line-height: 20px;
-                padding-right: 30px;
+                margin-right: 30px;
                 text-align: right;
                 position: relative;
                 z-index: 9;
