--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -136,7 +136,7 @@ a:hover{
 
                         }
                     }
-                    
+
                 }
             }
         }
@@ -184,7 +184,7 @@ a:hover{
 
                         }
                     }
-                    
+
                 }
             }
         }
@@ -293,12 +293,12 @@ a:hover{
                         margin: auto;
                     }
                 }
-                
+
                 h3{
                     font-weight: 600;
-                    font-size: 16px; 
-                    color: #32325d; 
-                    margin-bottom: 0px; 
+                    font-size: 16px;
+                    color: #32325d;
+                    margin-bottom: 0px;
                     position: relative;
                     z-index: -4;
                 }
@@ -309,7 +309,7 @@ a:hover{
                     .tab-icon{
                         background: #7561BA;
                         svg{
-                    
+
                         }
                     }
                 }
@@ -468,12 +468,12 @@ a:hover{
   .content-scroll::-webkit-scrollbar-track {
     background: #eee;
   }
-  
+
   .content-scroll::-webkit-scrollbar-thumb {
     background: #6e52d1;
     border-radius: 10px;
   }
-  
+
   .my-anchor-css-class{
     padding: 17px 13px 9px;
     font-size: 16px;
@@ -582,7 +582,7 @@ a:hover{
             border-left: inherit;
             border-radius: 0 .25rem .25rem 0;
         }
-      
+
     }
 }
 
@@ -647,16 +647,16 @@ select{
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
 input:-webkit-autofill:active{
     -webkit-box-shadow: 0 0 0 30px white inset !important;
     background: transparent !important;
     border-color: #fff !important;
 }
 textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover, 
-textarea:-webkit-autofill:focus, 
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
 textarea:-webkit-autofill:active{
     -webkit-box-shadow: 0 0 0 30px white inset !important;
     background: transparent !important;
@@ -740,7 +740,7 @@ textarea:-webkit-autofill:active{
             margin: auto;
             height: auto;
         }
-        
+
     }
     h3{
         font-weight: 600;
@@ -771,7 +771,7 @@ textarea:-webkit-autofill:active{
   .tab-content-scroll::-webkit-scrollbar-track {
     background: #eee;
   }
-  
+
   .tab-content-scroll::-webkit-scrollbar-thumb {
     background: #6e52d1;
     border-radius: 10px;
@@ -814,5 +814,26 @@ html{
                 }
             }
         }
+    }
+}
+
+/* Custom fields */
+.input-field.has-error {
+    border: 2px solid #e6000e;
+}
+
+.input-field.validated {
+    border: 2px solid #2dce89;
+}
+.form-control:focus {
+    box-shadow: none;
+}
+.custom-input-group {
+    position: relative;
+    .icon {
+        position: absolute;
+        top: 6px;
+        right: 0;
+        padding: 13px 15px;
     }
 }
